lastsignal/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lastsignal
  namespace: lastsignal
  labels:
    app: lastsignal
spec:
  type: ClusterIP
  selector:
    app: lastsignal
  ports:
    - name: http
      port: 3000
      targetPort: 3000
